--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>testweb</title>
-    <link rel="stylesheet" href="public/css/test.css">
+    <link rel="stylesheet" href="public/css/style.css">
 </head>
 <body>
     <h1>pan</h1>
-    <a href="#" class="btn-primary">點擊觀看</a>
+    
 </body>
 </html>
