--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
     <link rel="stylesheet" href="public/css/style.css">
 </head>
 <body>
-    <h1>pan</h1>
+    <header>
+        <div class="container">
+            <h1>Mr. Brown</h1>
+            <nav>
+                <ul>
+                    <li><a href="#">最新消息</a></li>
+                    <li><a href="#">關於我們</a></li>
+                    <li><a href="#">門市商品</a></li>
+                    <li><a href="#">連絡我們</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
     
 </body>
 </html>
