--- a/index.html
+++ b/index.html
@@ -4,23 +4,61 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>testweb</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="public/css/style.css">
 </head>
 <body>
     <header>
         <div class="container">
-            <h1>Mr. Brown</h1>
+            <h1>My Portfolio</h1>
             <nav>
                 <ul>
-                    <li><a href="#">最新消息</a></li>
-                    <li><a href="#">關於我們</a></li>
-                    <li><a href="#">門市商品</a></li>
-                    <li><a href="#">連絡我們</a></li>
+                    <li><a href="#">關於我</a></li>
+                    <li><a href="#">平面作品</a></li>
+                    <li><a href="#">網頁作品</a></li>
+                    <li><a href="#">連絡我</a></li>
                 </ul>
             </nav>
         </div>
     </header>
-    
+    <!-- ===============頁首結尾========================== -->
+    <img src="https://picsum.photos/1920/550" class="img-fluid" alt="">
+
+    <!--=====================content start=================================== -->
+    <div class="container">
+        <h1>最新作品</h1>
+        <div class="row">
+            <div class="col-4">
+                <img src="https://placekitten.com/300/300" alt="" class="img-fluid">
+                <p class="title"><a href="#">標題1</a></p>
+                <p class="description">內容</p>
+            </div>
+            <div class="col-4">
+                <img src="https://placekitten.com/300/300" alt="" class="img-fluid">
+                <p class="title"><a href="#">標題2</a></p>
+                <p class="description">內容</p>
+            </div>
+            <div class="col-4">
+                <img src="https://placekitten.com/300/300" alt="" class="img-fluid">
+                <p class="title"><a href="#">標題3</a></p>
+                <p class="description">內容</p>
+            </div>
+            <div class="col-4">
+                <img src="https://placekitten.com/300/300" alt="" class="img-fluid">
+                <p class="title"><a href="#">標題4</a></p>
+                <p class="description">內容</p>
+            </div>
+            <div class="col-4">
+                <img src="https://placekitten.com/300/300" alt="" class="img-fluid">
+                <p class="title"><a href="#">標題5</a></p>
+                <p class="description">內容</p>
+            </div>
+            <div class="col-4">
+                <img src="https://placekitten.com/300/300" alt="" class="img-fluid">
+                <p class="title"><a href="#">標題6</a></p>
+                <p class="description">內容</p>
+            </div>
+        </div>
+    </div>       
 </body>
 </html>
