--- a/index.html
+++ b/index.html
@@ -26,37 +26,37 @@
 
     <!--=====================content start=================================== -->
     <div class="container">
-        <h1>最新作品</h1>
+        <h2>最新作品</h2>
         <div class="row">
             <div class="col-4">
-                <img src="https://placekitten.com/300/300" alt="" class="img-fluid">
-                <p class="title"><a href="#">標題1</a></p>
-                <p class="description">內容</p>
+                <img src="https://placekitten.com/300/300" alt="" class="img-fluid ing-rounded">
+                <p class="title text-center"><a href="#">標題1</a></p>
+                <p class="description text-center">內容</p>
             </div>
             <div class="col-4">
-                <img src="https://placekitten.com/300/300" alt="" class="img-fluid">
-                <p class="title"><a href="#">標題2</a></p>
-                <p class="description">內容</p>
+                <img src="https://placekitten.com/300/300" alt="" class="img-fluid ing-rounded">
+                <p class="title text-center"><a href="#">標題2</a></p>
+                <p class="description text-center">內容</p>
             </div>
             <div class="col-4">
-                <img src="https://placekitten.com/300/300" alt="" class="img-fluid">
-                <p class="title"><a href="#">標題3</a></p>
-                <p class="description">內容</p>
+                <img src="https://placekitten.com/300/300" alt="" class="img-fluid ing-rounded">
+                <p class="title text-center"><a href="#">標題3</a></p>
+                <p class="description text-center">內容</p>
             </div>
             <div class="col-4">
-                <img src="https://placekitten.com/300/300" alt="" class="img-fluid">
-                <p class="title"><a href="#">標題4</a></p>
-                <p class="description">內容</p>
+                <img src="https://placekitten.com/300/300" alt="" class="img-fluid ing-rounded">
+                <p class="title text-center"><a href="#">標題4</a></p>
+                <p class="description text-center">內容</p>
             </div>
             <div class="col-4">
-                <img src="https://placekitten.com/300/300" alt="" class="img-fluid">
-                <p class="title"><a href="#">標題5</a></p>
-                <p class="description">內容</p>
+                <img src="https://placekitten.com/300/300" alt="" class="img-fluid ing-rounded">
+                <p class="title text-center"><a href="#">標題5</a></p>
+                <p class="description text-center">內容</p>
             </div>
             <div class="col-4">
-                <img src="https://placekitten.com/300/300" alt="" class="img-fluid">
-                <p class="title"><a href="#">標題6</a></p>
-                <p class="description">內容</p>
+                <img src="https://placekitten.com/300/300" alt="" class="img-fluid ing-rounded">
+                <p class="title text-center"><a href="#">標題6</a></p>
+                <p class="description text-center">內容</p>
             </div>
         </div>
     </div>       
