--- a/index.html
+++ b/index.html
@@ -29,36 +29,74 @@
         <h2>最新作品</h2>
         <div class="row">
             <div class="col-4">
-                <img src="https://placekitten.com/300/300" alt="" class="img-fluid ing-rounded">
-                <p class="title text-center"><a href="#">標題1</a></p>
-                <p class="description text-center">內容</p>
+                <a href=""><img src="https://placekitten.com/300/300" alt="" class="img-fluid img-rounded"></a>
+                <p class="title text-center"><a href="">標題1</a></p>
+                <p class="date text-center">2022-06-15</p>
             </div>
             <div class="col-4">
-                <img src="https://placekitten.com/300/300" alt="" class="img-fluid ing-rounded">
-                <p class="title text-center"><a href="#">標題2</a></p>
-                <p class="description text-center">內容</p>
+                <a href=""><img src="https://placekitten.com/300/300" alt="" class="img-fluid img-rounded"></a>
+                <p class="title text-center"><a href="">標題2</a></p>
+                <p class="date text-center">2022-06-15</p>
             </div>
             <div class="col-4">
-                <img src="https://placekitten.com/300/300" alt="" class="img-fluid ing-rounded">
-                <p class="title text-center"><a href="#">標題3</a></p>
-                <p class="description text-center">內容</p>
+                <a href=""><img src="https://placekitten.com/300/300" alt="" class="img-fluid img-rounded"></a>
+                <p class="title text-center"><a href="">標題3</a></p>
+                <p class="date text-center">2022-06-15</p>
             </div>
             <div class="col-4">
-                <img src="https://placekitten.com/300/300" alt="" class="img-fluid ing-rounded">
-                <p class="title text-center"><a href="#">標題4</a></p>
-                <p class="description text-center">內容</p>
+                <a href=""><img src="https://placekitten.com/300/300" alt="" class="img-fluid img-rounded"></a>
+                <p class="title text-center"><a href="">標題4</a></p>
+                <p class="date text-center">2022-06-15</p>
             </div>
             <div class="col-4">
-                <img src="https://placekitten.com/300/300" alt="" class="img-fluid ing-rounded">
-                <p class="title text-center"><a href="#">標題5</a></p>
-                <p class="description text-center">內容</p>
+                <a href=""><img src="https://placekitten.com/300/300" alt="" class="img-fluid img-rounded"></a>
+                <p class="title text-center"><a href="">標題5</a></p>
+                <p class="date text-center">2022-06-15</p>
             </div>
             <div class="col-4">
-                <img src="https://placekitten.com/300/300" alt="" class="img-fluid ing-rounded">
-                <p class="title text-center"><a href="#">標題6</a></p>
-                <p class="description text-center">內容</p>
+                <a href=""><img src="https://placekitten.com/300/300" alt="" class="img-fluid img-rounded"></a>
+                <p class="title text-center"><a href="">標題6</a></p>
+                <p class="date text-center">2022-06-15</p>
             </div>
         </div>
-    </div>       
+    </div>  
+    <!--=====================content end=================================== -->
+
+    <!--=====================footer start=================================== -->
+    <footer>
+        <div class="container">
+            <div class="row">
+                <dl class="col-3">
+                    <dt>標題01</dt>
+                    <dd><a href="">項目01</a></dd>
+                    <dd><a href="">項目02</a></dd>
+                    <dd><a href="">項目03</a></dd>
+                    <dd><a href="">項目04</a></dd>
+                </dl>
+                <dl class="col-3">
+                    <dt>標題02</dt>
+                    <dd><a href="">項目01</a></dd>
+                    <dd><a href="">項目02</a></dd>
+                    <dd><a href="">項目03</a></dd>
+                    <dd><a href="">項目04</a></dd>
+                </dl>
+                <dl class="col-3">
+                    <dt>標題03</dt>
+                    <dd><a href="">項目01</a></dd>
+                    <dd><a href="">項目02</a></dd>
+                    <dd><a href="">項目03</a></dd>
+                    <dd><a href="">項目04</a></dd>
+                </dl>
+                <dl class="col-3">
+                    <dt>標題04</dt>
+                    <dd><a href="">項目01</a></dd>
+                    <dd><a href="">項目02</a></dd>
+                    <dd><a href="">項目03</a></dd>
+                    <dd><a href="">項目04</a></dd>
+                </dl>
+            </div>
+            <p class="copyright text-center">copyright</p>
+        </div>
+    </footer>
 </body>
 </html>
