--- a/design-list.html
+++ b/design-list.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="public/css/style.css">
 </head>
+
 <body>
     <header>
         <div class="container">
@@ -14,7 +16,7 @@
             <nav>
                 <ul>
                     <li><a href="#">關於我</a></li>
-                    <li><a href="design-list.html">平面作品</a></li>
+                    <li><a href="#">平面作品</a></li>
                     <li><a href="#">網頁作品</a></li>
                     <li><a href="#">連絡我</a></li>
                 </ul>
@@ -22,44 +24,54 @@
         </div>
     </header>
     <!-- ===============頁首結尾========================== -->
-    <img src="https://picsum.photos/1920/550" class="img-fluid" alt="">
 
     <!--=====================content start=================================== -->
-    <div class="container">
-        <h2>最新作品</h2>
-        <div class="row">
-            <div class="col-4">
-                <a href=""><img src="https://placekitten.com/300/300" alt="" class="img-fluid img-rounded"></a>
-                <p class="title text-center"><a href="">標題1</a></p>
-                <p class="date text-center">2022-06-15</p>
+    <section>
+        <div class="topbar container">首頁>平面作品</div>
+        <h2 class="container">作品一覽</h2>
+        <div class="container">
+            <div class="leftbox">
+                <dl>
+                    <dt><a href="">類別01</a></dt>
+                    <dt><a href="">類別02</a></dt>
+                    <dt><a href="">類別03</a></dt>
+                    <dt><a href="">類別04</a></dt>
+                </dl>
             </div>
-            <div class="col-4">
-                <a href=""><img src="https://placekitten.com/300/300" alt="" class="img-fluid img-rounded"></a>
-                <p class="title text-center"><a href="">標題2</a></p>
-                <p class="date text-center">2022-06-15</p>
-            </div>
-            <div class="col-4">
-                <a href=""><img src="https://placekitten.com/300/300" alt="" class="img-fluid img-rounded"></a>
-                <p class="title text-center"><a href="">標題3</a></p>
-                <p class="date text-center">2022-06-15</p>
-            </div>
-            <div class="col-4">
-                <a href=""><img src="https://placekitten.com/300/300" alt="" class="img-fluid img-rounded"></a>
-                <p class="title text-center"><a href="">標題4</a></p>
-                <p class="date text-center">2022-06-15</p>
-            </div>
-            <div class="col-4">
-                <a href=""><img src="https://placekitten.com/300/300" alt="" class="img-fluid img-rounded"></a>
-                <p class="title text-center"><a href="">標題5</a></p>
-                <p class="date text-center">2022-06-15</p>
-            </div>
-            <div class="col-4">
-                <a href=""><img src="https://placekitten.com/300/300" alt="" class="img-fluid img-rounded"></a>
-                <p class="title text-center"><a href="">標題6</a></p>
-                <p class="date text-center">2022-06-15</p>
+            <div class="rightbox row">
+                <div class="col-4">
+                    <a href=""><img src="https://placekitten.com/150/150" alt="" class="img-fluid img-rounded"></a>
+                    <p class="title text-center">標題01</p>
+                    <p class="date text-center">2022-06-16</p>
+                </div>
+                <div class="col-4">
+                    <a href=""><img src="https://placekitten.com/150/150" alt="" class="img-fluid img-rounded"></a>
+                    <p class="title text-center">標題02</p>
+                    <p class="date text-center">2022-06-16</p>
+                </div>
+                <div class="col-4">
+                    <a href=""><img src="https://placekitten.com/150/150" alt="" class="img-fluid img-rounded"></a>
+                    <p class="title text-center">標題03</p>
+                    <p class="date text-center">2022-06-16</p>
+                </div>
+                <div class="col-4">
+                    <a href=""><img src="https://placekitten.com/150/150" alt="" class="img-fluid img-rounded"></a>
+                    <p class="title text-center">標題04</p>
+                    <p class="date text-center">2022-06-16</p>
+                </div>
+                <div class="col-4">
+                    <a href=""><img src="https://placekitten.com/150/150" alt="" class="img-fluid img-rounded"></a>
+                    <p class="title text-center">標題05</p>
+                    <p class="date text-center">2022-06-16</p>
+                </div>
+                <div class="col-4">
+                    <a href=""><img src="https://placekitten.com/150/150" alt="" class="img-fluid img-rounded"></a>
+                    <p class="title text-center">標題06</p>
+                    <p class="date text-center">2022-06-16</p>
+                </div>
             </div>
         </div>
-    </div>  
+    </section>
     <!--=====================content end=================================== -->
 
     <!--=====================footer start=================================== -->
@@ -99,4 +111,5 @@
         </div>
     </footer>
 </body>
+
 </html>
