--- a/design-list.html
+++ b/design-list.html
@@ -28,7 +28,6 @@
     <!--=====================content start=================================== -->
     <section>
         <div class="topbar container">首頁>平面作品</div>
-        <h2 class="container">作品一覽</h2>
         <div class="container">
             <div class="leftbox">
                 <dl>
@@ -39,6 +38,7 @@
                 </dl>
             </div>
             <div class="rightbox row">
+                <h2>作品一覽</h2>
                 <div class="col-4">
                     <a href=""><img src="https://placekitten.com/150/150" alt="" class="img-fluid img-rounded"></a>
                     <p class="title text-center">標題01</p>
