--- a/design-list.html
+++ b/design-list.html
@@ -16,7 +16,7 @@
             <nav>
                 <ul>
                     <li><a href="#">關於我</a></li>
-                    <li><a href="#">平面作品</a></li>
+                    <li><a href="design-list.html">平面作品</a></li>
                     <li><a href="#">網頁作品</a></li>
                     <li><a href="#">連絡我</a></li>
                 </ul>
@@ -27,7 +27,7 @@
 
     <!--=====================content start=================================== -->
     <section>
-        <div class="topbar container">首頁>平面作品</div>
+        <div class="topbar container"><a href="index.html">首頁</a> > <a href="design-list.html">平面作品</a> </div>
         <div class="container">
             <div class="leftbox">
                 <dl>
@@ -37,37 +37,39 @@
                     <dt><a href="">類別04</a></dt>
                 </dl>
             </div>
-            <div class="rightbox row">
+            <div class="rightbox">
                 <h2>作品一覽</h2>
-                <div class="col-4">
-                    <a href=""><img src="https://placekitten.com/150/150" alt="" class="img-fluid img-rounded"></a>
-                    <p class="title text-center">標題01</p>
-                    <p class="date text-center">2022-06-16</p>
-                </div>
-                <div class="col-4">
-                    <a href=""><img src="https://placekitten.com/150/150" alt="" class="img-fluid img-rounded"></a>
-                    <p class="title text-center">標題02</p>
-                    <p class="date text-center">2022-06-16</p>
-                </div>
-                <div class="col-4">
-                    <a href=""><img src="https://placekitten.com/150/150" alt="" class="img-fluid img-rounded"></a>
-                    <p class="title text-center">標題03</p>
-                    <p class="date text-center">2022-06-16</p>
-                </div>
-                <div class="col-4">
-                    <a href=""><img src="https://placekitten.com/150/150" alt="" class="img-fluid img-rounded"></a>
-                    <p class="title text-center">標題04</p>
-                    <p class="date text-center">2022-06-16</p>
-                </div>
-                <div class="col-4">
-                    <a href=""><img src="https://placekitten.com/150/150" alt="" class="img-fluid img-rounded"></a>
-                    <p class="title text-center">標題05</p>
-                    <p class="date text-center">2022-06-16</p>
-                </div>
-                <div class="col-4">
-                    <a href=""><img src="https://placekitten.com/150/150" alt="" class="img-fluid img-rounded"></a>
-                    <p class="title text-center">標題06</p>
-                    <p class="date text-center">2022-06-16</p>
+                <div class="row">
+                    <div class="col-4">
+                        <a href=""><img src="https://placekitten.com/150/150" alt="" class="img-fluid img-rounded"></a>
+                        <p class="title text-center">標題01</p>
+                        <p class="date text-center">2022-06-16</p>
+                    </div>
+                    <div class="col-4">
+                        <a href=""><img src="https://placekitten.com/150/150" alt="" class="img-fluid img-rounded"></a>
+                        <p class="title text-center">標題02</p>
+                        <p class="date text-center">2022-06-16</p>
+                    </div>
+                    <div class="col-4">
+                        <a href=""><img src="https://placekitten.com/150/150" alt="" class="img-fluid img-rounded"></a>
+                        <p class="title text-center">標題03</p>
+                        <p class="date text-center">2022-06-16</p>
+                    </div>
+                    <div class="col-4">
+                        <a href=""><img src="https://placekitten.com/150/150" alt="" class="img-fluid img-rounded"></a>
+                        <p class="title text-center">標題04</p>
+                        <p class="date text-center">2022-06-16</p>
+                    </div>
+                    <div class="col-4">
+                        <a href=""><img src="https://placekitten.com/150/150" alt="" class="img-fluid img-rounded"></a>
+                        <p class="title text-center">標題05</p>
+                        <p class="date text-center">2022-06-16</p>
+                    </div>
+                    <div class="col-4">
+                        <a href=""><img src="https://placekitten.com/150/150" alt="" class="img-fluid img-rounded"></a>
+                        <p class="title text-center">標題06</p>
+                        <p class="date text-center">2022-06-16</p>
+                    </div>
                 </div>
             </div>
         </div>
