--- a/design-list.html
+++ b/design-list.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Portfolio-design-list</title>
     <link rel="stylesheet" href="public/css/style.css">
 </head>
 
@@ -26,15 +26,17 @@
     <!-- ===============頁首結尾========================== -->
 
     <!--=====================content start=================================== -->
-    <section>
-        <div class="topbar container"><a href="index.html">首頁</a> > <a href="design-list.html">平面作品</a> </div>
+    <section class="S1 container">
+        <div class="topbar"><a href="index.html">首頁</a> > <a href="design-list.html">平面作品</a> </div>
+    </section>
+    <section class="S2">
         <div class="container">
             <div class="leftbox">
                 <dl>
-                    <dt><a href="">類別01</a></dt>
-                    <dt><a href="">類別02</a></dt>
-                    <dt><a href="">類別03</a></dt>
-                    <dt><a href="">類別04</a></dt>
+                    <dt><a href="#">類別01</a></dt>
+                    <dt><a href="#">類別02</a></dt>
+                    <dt><a href="#">類別03</a></dt>
+                    <dt><a href="#">類別04</a></dt>
                 </dl>
             </div>
             <div class="rightbox">
