--- a/design-list.html
+++ b/design-list.html
@@ -15,10 +15,10 @@
             <h1><a href="index.html">My Portfolio</a></h1>
             <nav>
                 <ul>
-                    <li><a href="#">關於我</a></li>
+                    <li><a href="#">關於作者</a></li>
                     <li><a href="design-list.html">平面作品</a></li>
                     <li><a href="#">網頁作品</a></li>
-                    <li><a href="#">連絡我</a></li>
+                    <li><a href="#">連絡作者</a></li>
                 </ul>
             </nav>
         </div>
