--- a/design-list.html
+++ b/design-list.html
@@ -27,7 +27,11 @@
 
     <!--=====================content start=================================== -->
     <section class="S1 container">
-        <div class="topbar"><a href="index.html">首頁</a> > <a href="design-list.html">平面作品</a> </div>
+        <p class="topbar">
+            <a href="index.html">首頁</a>
+             > 
+             <a href="design-list.html">平面作品</a> 
+        </p>
     </section>
     <section class="S2">
         <div class="container">
