--- a/design-list.html
+++ b/design-list.html
@@ -27,9 +27,9 @@
 
     <!--=====================content start=================================== -->
     <section class="S1 container">
-        <p class="topbar">
+        <p class="breadcrumb">
             <a href="index.html">首頁</a>
-             > 
+             &nbsp;>&nbsp;
              <a href="design-list.html">平面作品</a> 
         </p>
     </section>
