--- a/deslign-list2.html
+++ b/deslign-list2.html
@@ -33,7 +33,14 @@
                 >
                 <a href="design-list2.html">平面作品</a>
             </p>
-            <aside class="col-4">分類</aside>
+            <aside class="col-4">
+                <ul>
+                    <li><a href="#" class="btn-primary">標題01</a></li>
+                    <li><a href="#" class="btn-primary">標題02</a></li>
+                    <li><a href="#" class="btn-primary">標題03</a></li>
+                    <li><a href="#" class="btn-primary">標題04</a></li>
+                </ul>
+            </aside>
             <main class="col-8">
                 <div class="row">
                     <div class="col-4"><img src="https://placekitten.com/150/150" alt=""
