--- a/deslign-list2.html
+++ b/deslign-list2.html
@@ -43,18 +43,45 @@
             </aside>
             <main class="col-9">
                 <div class="row">
-                    <div class="col-4"><img src="https://placekitten.com/150/150" alt=""
-                            class="img-fluid img-rounded"><a href="#" class="text-center">商品01</a></div>
-                    <div class="col-4"><img src="https://placekitten.com/150/150" alt=""
-                            class="img-fluid img-rounded"><a href="#" class="text-center">商品02</a></div>
-                    <div class="col-4"><img src="https://placekitten.com/150/150" alt=""
-                            class="img-fluid img-rounded"><a href="#" class="text-center">商品03</a></div>
-                    <div class="col-4"><img src="https://placekitten.com/150/150" alt=""
-                            class="img-fluid img-rounded"><a href="#" class="text-center">商品04</a></div>
-                    <div class="col-4"><img src="https://placekitten.com/150/150" alt=""
-                            class="img-fluid img-rounded"><a href="#" class="text-center">商品05</a></div>
-                    <div class="col-4"><img src="https://placekitten.com/150/150" alt=""
-                            class="img-fluid img-rounded"><a href="#" class="text-center">商品06</a></div>
+                    <div class="col-4 text-center">
+                        <a href="#" class="img-wrap">
+                            <div class="img-overlay">
+                                <img src="https://placekitten.com/250/250" alt="" class="img-fluid img-rounded">
+                            </div>
+                           <span class="icon-hot">HOT</span>
+                        </a>
+                        <a href="#" class="text-center">商品01</a>
+                    </div>
+                    <div class="col-4">
+                        <a href="#"><img src="https://placekitten.com/150/150" alt="" class="img-fluid img-rounded"></a>
+                        <a href="#" class="text-center">商品02</a>
+                    </div>
+                    <div class="col-4 text-center">
+                        <a href="#" class="img-wrap">
+                            <div class="img-overlay">
+                                <img src="https://placekitten.com/250/250" alt="" class="img-fluid img-rounded">
+                            </div>
+                           <span class="icon-hot">HOT</span>
+                        </a>
+                        <a href="#" class="text-center">商品03</a>
+                    </div>
+                    <div class="col-4">
+                        <a href="#"><img src="https://placekitten.com/150/150" alt="" class="img-fluid img-rounded"></a>
+                        <a href="#" class="text-center">商品04</a>
+                    </div>
+                    <div class="col-4 text-center">
+                        <a href="#" class="img-wrap">
+                            <div class="img-overlay">
+                                <img src="https://placekitten.com/250/250" alt="" class="img-fluid img-rounded">
+                            </div>
+                           <span class="icon-hot">HOT</span>
+                        </a>
+                        <a href="#" class="text-center">商品05</a>
+                    </div>
+                    <div class="col-4">
+                        <a href="#"><img src="https://placekitten.com/150/150" alt="" class="img-fluid img-rounded"></a>
+                        <a href="#" class="text-center">商品06</a>
+                    </div>
                 </div>
             </main>
         </div>
