--- a/deslign-list2.html
+++ b/deslign-list2.html
@@ -52,7 +52,7 @@
                         </a>
                         <a href="#" class="text-center">商品01</a>
                     </div>
-                    <div class="col-4">
+                    <div class="col-4 img-overlay">
                         <a href="#"><img src="https://placekitten.com/150/150" alt="" class="img-fluid img-rounded"></a>
                         <a href="#" class="text-center">商品02</a>
                     </div>
@@ -65,7 +65,7 @@
                         </a>
                         <a href="#" class="text-center">商品03</a>
                     </div>
-                    <div class="col-4">
+                    <div class="col-4 img-overlay">
                         <a href="#"><img src="https://placekitten.com/150/150" alt="" class="img-fluid img-rounded"></a>
                         <a href="#" class="text-center">商品04</a>
                     </div>
@@ -78,7 +78,7 @@
                         </a>
                         <a href="#" class="text-center">商品05</a>
                     </div>
-                    <div class="col-4">
+                    <div class="col-4 img-overlay">
                         <a href="#"><img src="https://placekitten.com/150/150" alt="" class="img-fluid img-rounded"></a>
                         <a href="#" class="text-center">商品06</a>
                     </div>
