--- a/deslign-list2.html
+++ b/deslign-list2.html
@@ -53,7 +53,11 @@
                         <a href="#" class="text-center">商品01</a>
                     </div>
                     <div class="col-4 img-overlay">
-                        <a href="#"><img src="https://placekitten.com/150/150" alt="" class="img-fluid img-rounded"></a>
+                        <a href="#" class="img-wrap">
+                            <div class="img-overlay">
+                                <img src="https://placekitten.com/250/250" alt="" class="img-fluid img-rounded">
+                            </div>
+                        </a>
                         <a href="#" class="text-center">商品02</a>
                     </div>
                     <div class="col-4 text-center">
@@ -66,7 +70,11 @@
                         <a href="#" class="text-center">商品03</a>
                     </div>
                     <div class="col-4 img-overlay">
-                        <a href="#"><img src="https://placekitten.com/150/150" alt="" class="img-fluid img-rounded"></a>
+                        <a href="#" class="img-wrap">
+                            <div class="img-overlay">
+                                <img src="https://placekitten.com/250/250" alt="" class="img-fluid img-rounded">
+                            </div>
+                        </a>
                         <a href="#" class="text-center">商品04</a>
                     </div>
                     <div class="col-4 text-center">
@@ -79,7 +87,11 @@
                         <a href="#" class="text-center">商品05</a>
                     </div>
                     <div class="col-4 img-overlay">
-                        <a href="#"><img src="https://placekitten.com/150/150" alt="" class="img-fluid img-rounded"></a>
+                        <a href="#" class="img-wrap">
+                            <div class="img-overlay">
+                                <img src="https://placekitten.com/250/250" alt="" class="img-fluid img-rounded">
+                            </div>
+                        </a>
                         <a href="#" class="text-center">商品06</a>
                     </div>
                 </div>
