--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <ul>
                     <li><a href="#">關於作者</a></li>
                     <li><a href="design-list.html">平面作品</a></li>
-                    <li><a href="#">網頁作品</a></li>
+                    <li><a href="deslign-list2.html">網頁作品</a></li>
                     <li><a href="#">連絡作者</a></li>
                 </ul>
             </nav>
