--- a/design-list.html
+++ b/design-list.html
@@ -1,123 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio-design-list</title>
     <link rel="stylesheet" href="public/css/style.css">
-</head>
-
-<body>
+  </head>
+  <body>
     <header>
-        <div class="container">
-            <h1><a href="index.html">My Portfolio</a></h1>
-            <nav>
-                <ul>
-                    <li><a href="#">關於作者</a></li>
-                    <li><a href="design-list.html">平面作品</a></li>
-                    <li><a href="deslign-list2.html">網頁作品</a></li>
-                    <li><a href="#">連絡作者</a></li>
-                </ul>
-            </nav>
-        </div>
+      <div class="container overflow-hidden"><a class="icon-menu" href="#">menu</a>
+        <h1><a href="index.html">My Portfolio</a></h1>
+        <nav>
+          <ul>
+            <li><a href="#">關於作者</a></li>
+            <li><a href="design-list.html">平面作品</a></li>
+            <li><a href="deslign-list2.html">網頁作品</a></li>
+            <li><a href="#">連絡作者</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
-    <!-- ===============頁首結尾========================== -->
-
-    <!--=====================content start=================================== -->
+    <!-- ===============頁首結尾==========================-->
+    <!-- =====================content start===================================-->
     <section class="S1 container">
-        <p class="breadcrumb">
-            <a href="index.html">首頁</a>
-             &nbsp;>&nbsp;
-             <a href="design-list.html">平面作品</a> 
-        </p>
+      <p class="breadcrumb"><a href="index.html">首頁</a><span>&nbsp; &gt; &nbsp;</span><a href="design-list.html">平面作品</a></p>
     </section>
     <section class="S2">
-        <div class="container">
-            <div class="leftbox">
-                <dl>
-                    <dt><a href="#">類別01</a></dt>
-                    <dt><a href="#">類別02</a></dt>
-                    <dt><a href="#">類別03</a></dt>
-                    <dt><a href="#">類別04</a></dt>
-                </dl>
-            </div>
-            <div class="rightbox">
-                <h2>作品一覽</h2>
-                <div class="row">
-                    <div class="col-4">
-                        <a href=""><img src="https://placekitten.com/150/150" alt="" class="img-fluid img-rounded"></a>
-                        <p class="title text-center">標題01</p>
-                        <p class="date text-center">2022-06-16</p>
-                    </div>
-                    <div class="col-4">
-                        <a href=""><img src="https://placekitten.com/150/150" alt="" class="img-fluid img-rounded"></a>
-                        <p class="title text-center">標題02</p>
-                        <p class="date text-center">2022-06-16</p>
-                    </div>
-                    <div class="col-4">
-                        <a href=""><img src="https://placekitten.com/150/150" alt="" class="img-fluid img-rounded"></a>
-                        <p class="title text-center">標題03</p>
-                        <p class="date text-center">2022-06-16</p>
-                    </div>
-                    <div class="col-4">
-                        <a href=""><img src="https://placekitten.com/150/150" alt="" class="img-fluid img-rounded"></a>
-                        <p class="title text-center">標題04</p>
-                        <p class="date text-center">2022-06-16</p>
-                    </div>
-                    <div class="col-4">
-                        <a href=""><img src="https://placekitten.com/150/150" alt="" class="img-fluid img-rounded"></a>
-                        <p class="title text-center">標題05</p>
-                        <p class="date text-center">2022-06-16</p>
-                    </div>
-                    <div class="col-4">
-                        <a href=""><img src="https://placekitten.com/150/150" alt="" class="img-fluid img-rounded"></a>
-                        <p class="title text-center">標題06</p>
-                        <p class="date text-center">2022-06-16</p>
-                    </div>
-                </div>
-            </div>
+      <div class="container">
+        <div class="leftbox">
+          <dl>
+            <dt><a href="#">類別01</a></dt>
+            <dt><a href="#">類別02</a></dt>
+            <dt><a href="#">類別03</a></dt>
+            <dt><a href="#">類別04</a></dt>
+          </dl>
         </div>
+        <div class="rightbox">
+          <h2>作品一覽</h2>
+          <div class="row">
+            <div class="col-12 col-md-4"><a href=""><img class="img-fluid img-rounded" src="https://placekitten.com/150/150" alt=""></a>
+              <p class="title text-center">標題01</p>
+              <p class="date text-center">2022-06-16</p>
+            </div>
+            <div class="col-12 col-md-4"><a href=""><img class="img-fluid img-rounded" src="https://placekitten.com/150/150" alt=""></a>
+              <p class="title text-center">標題02</p>
+              <p class="date text-center">2022-06-16</p>
+            </div>
+            <div class="col-12 col-md-4"><a href=""><img class="img-fluid img-rounded" src="https://placekitten.com/150/150" alt=""></a>
+              <p class="title text-center">標題03</p>
+              <p class="date text-center">2022-06-16</p>
+            </div>
+            <div class="col-12 col-md-4"><a href=""><img class="img-fluid img-rounded" src="https://placekitten.com/150/150" alt=""></a>
+              <p class="title text-center">標題04</p>
+              <p class="date text-center">2022-06-16</p>
+            </div>
+            <div class="col-12 col-md-4"><a href=""><img class="img-fluid img-rounded" src="https://placekitten.com/150/150" alt=""></a>
+              <p class="title text-center">標題05</p>
+              <p class="date text-center">2022-06-16</p>
+            </div>
+            <div class="col-12 col-md-4"><a href=""><img class="img-fluid img-rounded" src="https://placekitten.com/150/150" alt=""></a>
+              <p class="title text-center">標題06</p>
+              <p class="date text-center">2022-06-16</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
-    <!--=====================content end=================================== -->
-
-    <!--=====================footer start=================================== -->
+    <!-- =====================content end===================================-->
+    <!-- =====================footer start===================================-->
     <footer>
-        <div class="container">
-            <div class="row">
-                <dl class="col-3">
-                    <dt>標題01</dt>
-                    <dd><a href="">項目01</a></dd>
-                    <dd><a href="">項目02</a></dd>
-                    <dd><a href="">項目03</a></dd>
-                    <dd><a href="">項目04</a></dd>
-                </dl>
-                <dl class="col-3">
-                    <dt>標題02</dt>
-                    <dd><a href="">項目01</a></dd>
-                    <dd><a href="">項目02</a></dd>
-                    <dd><a href="">項目03</a></dd>
-                    <dd><a href="">項目04</a></dd>
-                </dl>
-                <dl class="col-3">
-                    <dt>標題03</dt>
-                    <dd><a href="">項目01</a></dd>
-                    <dd><a href="">項目02</a></dd>
-                    <dd><a href="">項目03</a></dd>
-                    <dd><a href="">項目04</a></dd>
-                </dl>
-                <dl class="col-3">
-                    <dt>標題04</dt>
-                    <dd><a href="">項目01</a></dd>
-                    <dd><a href="">項目02</a></dd>
-                    <dd><a href="">項目03</a></dd>
-                    <dd><a href="">項目04</a></dd>
-                </dl>
-            </div>
-            <p class="copyright text-center">copyright</p>
+      <div class="container">
+        <div class="row">
+          <dl class="col-3">
+            <dt>標題01
+              <dd><a href="">項目01</a></dd>
+              <dd><a href="">項目02</a></dd>
+              <dd><a href="">項目03</a></dd>
+              <dd><a href="">項目04</a></dd>
+            </dt>
+          </dl>
+          <dl class="col-3">
+            <dt>標題02
+              <dd><a href="">項目01</a></dd>
+              <dd><a href="">項目02</a></dd>
+              <dd><a href="">項目03</a></dd>
+              <dd><a href="">項目04</a></dd>
+            </dt>
+          </dl>
+          <dl class="col-3">
+            <dt>標題03
+              <dd><a href="">項目01</a></dd>
+              <dd><a href="">項目02</a></dd>
+              <dd><a href="">項目03</a></dd>
+              <dd><a href="">項目04</a></dd>
+            </dt>
+          </dl>
+          <dl class="col-3">
+            <dt>標題04
+              <dd><a href="">項目01</a></dd>
+              <dd><a href="">項目02</a></dd>
+              <dd><a href="">項目03</a></dd>
+              <dd><a href="">項目04</a></dd>
+            </dt>
+          </dl>
         </div>
+      </div>
+      <p class="copyright text-center">copyright</p>
     </footer>
-</body>
-
+  </body>
 </html>
