--- a/deslign-list2.html
+++ b/deslign-list2.html
@@ -30,10 +30,10 @@
         <div class="row">
             <p class="breadcrumb">
                 <a href="index.html">首頁</a>
-                >
+                &nbsp; > &nbsp;
                 <a href="design-list2.html">平面作品</a>
             </p>
-            <aside class="col-3">
+            <aside class="col-md-3">
                 <ul>
                     <li><a href="#" class="btn-primary">標題01</a></li>
                     <li><a href="#" class="btn-primary">標題02</a></li>
@@ -43,7 +43,7 @@
             </aside>
             <main class="col-9">
                 <div class="row">
-                    <div class="col-4 text-center">
+                    <div class="col-md-4 text-center">
                         <a href="#" class="img-wrap">
                             <div class="img-overlay">
                                 <img src="https://placekitten.com/250/250" alt="" class="img-fluid img-rounded">
@@ -52,7 +52,7 @@
                         </a>
                         <a href="#" class="text-center">商品01</a>
                     </div>
-                    <div class="col-4 img-overlay">
+                    <div class="col-md-4 img-overlay">
                         <a href="#" class="img-wrap">
                             <div class="img-overlay">
                                 <img src="https://placekitten.com/250/250" alt="" class="img-fluid img-rounded">
@@ -60,7 +60,7 @@
                         </a>
                         <a href="#" class="text-center">商品02</a>
                     </div>
-                    <div class="col-4 text-center">
+                    <div class="col-md-4 text-center">
                         <a href="#" class="img-wrap">
                             <div class="img-overlay">
                                 <img src="https://placekitten.com/250/250" alt="" class="img-fluid img-rounded">
@@ -69,7 +69,7 @@
                         </a>
                         <a href="#" class="text-center">商品03</a>
                     </div>
-                    <div class="col-4 img-overlay">
+                    <div class="col-md-4 img-overlay">
                         <a href="#" class="img-wrap">
                             <div class="img-overlay">
                                 <img src="https://placekitten.com/250/250" alt="" class="img-fluid img-rounded">
@@ -77,7 +77,7 @@
                         </a>
                         <a href="#" class="text-center">商品04</a>
                     </div>
-                    <div class="col-4 text-center">
+                    <div class="col-md-4 text-center">
                         <a href="#" class="img-wrap">
                             <div class="img-overlay">
                                 <img src="https://placekitten.com/250/250" alt="" class="img-fluid img-rounded">
@@ -86,7 +86,7 @@
                         </a>
                         <a href="#" class="text-center">商品05</a>
                     </div>
-                    <div class="col-4 img-overlay">
+                    <div class="col-md-4 img-overlay">
                         <a href="#" class="img-wrap">
                             <div class="img-overlay">
                                 <img src="https://placekitten.com/250/250" alt="" class="img-fluid img-rounded">
@@ -104,28 +104,28 @@
     <footer>
         <div class="container">
             <div class="row">
-                <dl class="col-3">
+                <dl class="col-md-3">
                     <dt>標題01</dt>
                     <dd><a href="">項目01</a></dd>
                     <dd><a href="">項目02</a></dd>
                     <dd><a href="">項目03</a></dd>
                     <dd><a href="">項目04</a></dd>
                 </dl>
-                <dl class="col-3">
+                <dl class="col-md-3">
                     <dt>標題02</dt>
                     <dd><a href="">項目01</a></dd>
                     <dd><a href="">項目02</a></dd>
                     <dd><a href="">項目03</a></dd>
                     <dd><a href="">項目04</a></dd>
                 </dl>
-                <dl class="col-3">
+                <dl class="col-md-3">
                     <dt>標題03</dt>
                     <dd><a href="">項目01</a></dd>
                     <dd><a href="">項目02</a></dd>
                     <dd><a href="">項目03</a></dd>
                     <dd><a href="">項目04</a></dd>
                 </dl>
-                <dl class="col-3">
+                <dl class="col-md-3">
                     <dt>標題04</dt>
                     <dd><a href="">項目01</a></dd>
                     <dd><a href="">項目02</a></dd>
