--- a/index.html
+++ b/index.html
@@ -1,102 +1,91 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
-    <link rel="stylesheet" href="public/css/style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portfolio</title>
+  <link rel="stylesheet" href="public/css/style.css">
 </head>
-<body>
-    <header>
-        <div class="container">
-            <h1><a href="index.html">My Portfolio</a></h1>
-            <nav>
-                <ul>
-                    <li><a href="#">關於作者</a></li>
-                    <li><a href="design-list.html">平面作品</a></li>
-                    <li><a href="deslign-list2.html">網頁作品</a></li>
-                    <li><a href="#">連絡作者</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-    <!-- ===============頁首結尾========================== -->
-    <img src="https://picsum.photos/1920/550" class="img-fluid" alt="">
-
-    <!--=====================content start=================================== -->
+<body> 
+  <header>
+    <div class="container overflow-hidden"><a class="icon-menu" href="#">menu</a>
+      <h1><a href="index.html">My Portfolio</a></h1>
+      <nav>
+        <ul>
+          <li><a href="#">關於作者</a></li>
+          <li><a href="design-list.html">平面作品</a></li>
+          <li><a href="deslign-list2.html">網頁作品</a></li>
+          <li><a href="#">連絡作者</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <!-- ===============頁首結尾==========================--><img class="img-fluid" src="https://picsum.photos/1920/550" alt="">
+  <!-- =====================content start===================================-->
+  <div class="container">
+    <h2>最新作品</h2>
+    <div class="row">
+      <div class="col-6 col-md-4"><a href=""><img class="img-fluid img-rounded" src="https://placekitten.com/300/300" alt=""></a>
+        <p class="title text-center"><a href="">標題1</a></p>
+        <p class="date text-center">2022-06-15</p>
+      </div>
+      <div class="col-6 col-md-4"><a href=""><img class="img-fluid img-rounded" src="https://placekitten.com/300/300" alt=""></a>
+        <p class="title text-center"><a href="">標題2</a></p>
+        <p class="date text-center">2022-06-15</p>
+      </div>
+      <div class="col-6 col-md-4"><a href=""><img class="img-fluid img-rounded" src="https://placekitten.com/300/300" alt=""></a>
+        <p class="title text-center"><a href="">標題3</a></p>
+        <p class="date text-center">2022-06-15</p>
+      </div>
+      <div class="col-6 col-md-4"><a href=""><img class="img-fluid img-rounded" src="https://placekitten.com/300/300" alt=""></a>
+        <p class="title text-center"><a href="">標題4</a></p>
+        <p class="date text-center">2022-06-15</p>
+      </div>
+      <div class="col-6 col-md-4"><a href=""><img class="img-fluid img-rounded" src="https://placekitten.com/300/300" alt=""></a>
+        <p class="title text-center"><a href="">標題5</a></p>
+        <p class="date text-center">2022-06-15</p>
+      </div>
+      <div class="col-6 col-md-4"><a href=""><img class="img-fluid img-rounded" src="https://placekitten.com/300/300" alt=""></a>
+        <p class="title text-center"><a href="">標題6</a></p>
+        <p class="date text-center">2022-06-15</p>
+      </div>
+    </div>
+  </div>
+  <!-- =====================content end===================================-->
+  <!-- =====================footer start===================================-->
+  <footer>
     <div class="container">
-        <h2>最新作品</h2>
-        <div class="row">
-            <div class="col-4">
-                <a href=""><img src="https://placekitten.com/300/300" alt="" class="img-fluid img-rounded"></a>
-                <p class="title text-center"><a href="">標題1</a></p>
-                <p class="date text-center">2022-06-15</p>
-            </div>
-            <div class="col-4">
-                <a href=""><img src="https://placekitten.com/300/300" alt="" class="img-fluid img-rounded"></a>
-                <p class="title text-center"><a href="">標題2</a></p>
-                <p class="date text-center">2022-06-15</p>
-            </div>
-            <div class="col-4">
-                <a href=""><img src="https://placekitten.com/300/300" alt="" class="img-fluid img-rounded"></a>
-                <p class="title text-center"><a href="">標題3</a></p>
-                <p class="date text-center">2022-06-15</p>
-            </div>
-            <div class="col-4">
-                <a href=""><img src="https://placekitten.com/300/300" alt="" class="img-fluid img-rounded"></a>
-                <p class="title text-center"><a href="">標題4</a></p>
-                <p class="date text-center">2022-06-15</p>
-            </div>
-            <div class="col-4">
-                <a href=""><img src="https://placekitten.com/300/300" alt="" class="img-fluid img-rounded"></a>
-                <p class="title text-center"><a href="">標題5</a></p>
-                <p class="date text-center">2022-06-15</p>
-            </div>
-            <div class="col-4">
-                <a href=""><img src="https://placekitten.com/300/300" alt="" class="img-fluid img-rounded"></a>
-                <p class="title text-center"><a href="">標題6</a></p>
-                <p class="date text-center">2022-06-15</p>
-            </div>
-        </div>
-    </div>  
-    <!--=====================content end=================================== -->
-
-    <!--=====================footer start=================================== -->
-    <footer>
-        <div class="container">
-            <div class="row">
-                <dl class="col-3">
-                    <dt>標題01</dt>
-                    <dd><a href="">項目01</a></dd>
-                    <dd><a href="">項目02</a></dd>
-                    <dd><a href="">項目03</a></dd>
-                    <dd><a href="">項目04</a></dd>
-                </dl>
-                <dl class="col-3">
-                    <dt>標題02</dt>
-                    <dd><a href="">項目01</a></dd>
-                    <dd><a href="">項目02</a></dd>
-                    <dd><a href="">項目03</a></dd>
-                    <dd><a href="">項目04</a></dd>
-                </dl>
-                <dl class="col-3">
-                    <dt>標題03</dt>
-                    <dd><a href="">項目01</a></dd>
-                    <dd><a href="">項目02</a></dd>
-                    <dd><a href="">項目03</a></dd>
-                    <dd><a href="">項目04</a></dd>
-                </dl>
-                <dl class="col-3">
-                    <dt>標題04</dt>
-                    <dd><a href="">項目01</a></dd>
-                    <dd><a href="">項目02</a></dd>
-                    <dd><a href="">項目03</a></dd>
-                    <dd><a href="">項目04</a></dd>
-                </dl>
-            </div>
-            <p class="copyright text-center">copyright</p>
-        </div>
-    </footer>
+      <div class="row">
+        <dl class="col-3 col-md-3">
+          <dt>標題01</dt>
+          <dd><a href="">項目01</a></dd>
+          <dd><a href="">項目02</a></dd>
+          <dd><a href="">項目03</a></dd>
+          <dd><a href="">項目04</a></dd>
+        </dl>
+        <dl class="col-3 col-md-3">
+          <dt>標題02</dt>
+          <dd><a href="">項目01</a></dd>
+          <dd><a href="">項目02</a></dd>
+          <dd><a href="">項目03</a></dd>
+          <dd><a href="">項目04</a></dd>
+        </dl>
+        <dl class="col-3 col-md-3">
+          <dt>標題03</dt>
+          <dd><a href="">項目01</a></dd>
+          <dd><a href="">項目02</a></dd>
+          <dd><a href="">項目03</a></dd>
+          <dd><a href="">項目04</a></dd>
+        </dl>
+        <dl class="col-3 col-md-3">
+          <dt>標題04</dt>
+          <dd><a href="">項目01</a></dd>
+          <dd><a href="">項目02</a></dd>
+          <dd><a href="">項目03</a></dd>
+          <dd><a href="">項目04</a></dd>
+        </dl>
+      </div>
+      <p class="copyright text-center">copyright</p>
+    </div>
+  </footer>
 </body>
-</html>
