--- a/about-us.html
+++ b/about-us.html
@@ -23,50 +23,21 @@
     </header>
     <!-- ===============頁首結尾==========================-->
     <!-- =====================content start===================================-->
-    <section class="S1 container">
-      <p class="breadcrumb"><a href="index.html">首頁</a><span>&nbsp; &gt; &nbsp;</span><a href="design-list.html">平面作品</a></p>
-    </section>
-    <section class="S2">
-      <div class="container">
-        <div class="leftbox col-12 col-md-9">
-          <dl>
-            <dt><a href="#">類別01</a></dt>
-            <dt><a href="#">類別02</a></dt>
-            <dt><a href="#">類別03</a></dt>
-            <dt><a href="#">類別04</a></dt>
-          </dl>
-        </div>
-        <div class="rightbox col-12 col-md-3">
-          <h2>作品一覽</h2>
-          <div class="row">
-            <div class="col-12 col-md-4"><a href=""><img class="img-fluid img-rounded" src="https://placekitten.com/150/150" alt=""></a>
-              <p class="title text-center">標題01</p>
-              <p class="date text-center">2022-06-16</p>
-            </div>
-            <div class="col-12 col-md-4"><a href=""><img class="img-fluid img-rounded" src="https://placekitten.com/150/150" alt=""></a>
-              <p class="title text-center">標題02</p>
-              <p class="date text-center">2022-06-16</p>
-            </div>
-            <div class="col-12 col-md-4"><a href=""><img class="img-fluid img-rounded" src="https://placekitten.com/150/150" alt=""></a>
-              <p class="title text-center">標題03</p>
-              <p class="date text-center">2022-06-16</p>
-            </div>
-            <div class="col-12 col-md-4"><a href=""><img class="img-fluid img-rounded" src="https://placekitten.com/150/150" alt=""></a>
-              <p class="title text-center">標題04</p>
-              <p class="date text-center">2022-06-16</p>
-            </div>
-            <div class="col-12 col-md-4"><a href=""><img class="img-fluid img-rounded" src="https://placekitten.com/150/150" alt=""></a>
-              <p class="title text-center">標題05</p>
-              <p class="date text-center">2022-06-16</p>
-            </div>
-            <div class="col-12 col-md-4"><a href=""><img class="img-fluid img-rounded" src="https://placekitten.com/150/150" alt=""></a>
-              <p class="title text-center">標題06</p>
-              <p class="date text-center">2022-06-16</p>
-            </div>
-          </div>
+    <div class="container"> 
+      <div class="row"> 
+        <div class="col-12"> 
+          <h2>關於作者</h2>
         </div>
       </div>
-    </section>
+      <div class="row"> 
+        <div class="col-12 col-md-6"><img class="img-fluid img-rounded" src="https://placekitten.com/150/150" alt=""></div>
+        <div class="col-12 col-md-6">02</div>
+      </div>
+      <div class="row"> 
+        <div class="col-12 col-md-6"><img class="img-fluid img-rounded" src="https://placekitten.com/150/150" alt=""></div>
+        <div class="col-12 col-md-6 order-md-1">02</div>
+      </div>
+    </div>
     <!-- =====================content end===================================-->
     <!-- =====================footer start===================================-->
     <footer>
