--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
 </head>
 <body> 
   <header>
-    <div class="container overflow-hidden"><a class="icon-menu" href="#">menu</a>
-      <h1><a href="index.html">My Portfolio</a></h1>
-      <nav>
-        <ul>
-          <li><a href="#">關於作者</a></li>
-          <li><a href="design-list.html">平面作品</a></li>
-          <li><a href="deslign-list2.html">網頁作品</a></li>
-          <li><a href="#">連絡作者</a></li>
-        </ul>
-      </nav>
+    <div class="container">
+      <div class="row flex-space-between">
+        <h1><a href="index.html">My Portfolio</a></h1><a class="icon-menu" href="#">menu</a>
+        <nav>
+          <ul>
+            <li><a href="#">關於作者</a></li>
+            <li><a href="design-list.html">平面作品</a></li>
+            <li><a href="deslign-list2.html">網頁作品</a></li>
+            <li><a href="#">連絡作者</a></li>
+          </ul>
+        </nav>
+      </div>
     </div>
   </header>
   <!-- ===============頁首結尾==========================--><img class="img-fluid" src="https://picsum.photos/1920/550" alt="">
@@ -25,27 +27,27 @@
   <div class="container">
     <h2>最新作品</h2>
     <div class="row">
-      <div class="col-6 col-md-4"><a href=""><img class="img-fluid img-rounded" src="https://placekitten.com/300/300" alt=""></a>
+      <div class="col-12 col-md-4"><a href=""><img class="img-fluid img-rounded" src="https://placekitten.com/300/300" alt=""></a>
         <p class="title text-center"><a href="">標題1</a></p>
         <p class="date text-center">2022-06-15</p>
       </div>
-      <div class="col-6 col-md-4"><a href=""><img class="img-fluid img-rounded" src="https://placekitten.com/300/300" alt=""></a>
+      <div class="col-12 col-md-4"><a href=""><img class="img-fluid img-rounded" src="https://placekitten.com/300/300" alt=""></a>
         <p class="title text-center"><a href="">標題2</a></p>
         <p class="date text-center">2022-06-15</p>
       </div>
-      <div class="col-6 col-md-4"><a href=""><img class="img-fluid img-rounded" src="https://placekitten.com/300/300" alt=""></a>
+      <div class="col-12 col-md-4"><a href=""><img class="img-fluid img-rounded" src="https://placekitten.com/300/300" alt=""></a>
         <p class="title text-center"><a href="">標題3</a></p>
         <p class="date text-center">2022-06-15</p>
       </div>
-      <div class="col-6 col-md-4"><a href=""><img class="img-fluid img-rounded" src="https://placekitten.com/300/300" alt=""></a>
+      <div class="col-12 col-md-4"><a href=""><img class="img-fluid img-rounded" src="https://placekitten.com/300/300" alt=""></a>
         <p class="title text-center"><a href="">標題4</a></p>
         <p class="date text-center">2022-06-15</p>
       </div>
-      <div class="col-6 col-md-4"><a href=""><img class="img-fluid img-rounded" src="https://placekitten.com/300/300" alt=""></a>
+      <div class="col-12 col-md-4"><a href=""><img class="img-fluid img-rounded" src="https://placekitten.com/300/300" alt=""></a>
         <p class="title text-center"><a href="">標題5</a></p>
         <p class="date text-center">2022-06-15</p>
       </div>
-      <div class="col-6 col-md-4"><a href=""><img class="img-fluid img-rounded" src="https://placekitten.com/300/300" alt=""></a>
+      <div class="col-12 col-md-4"><a href=""><img class="img-fluid img-rounded" src="https://placekitten.com/300/300" alt=""></a>
         <p class="title text-center"><a href="">標題6</a></p>
         <p class="date text-center">2022-06-15</p>
       </div>
