--- a/index.html
+++ b/index.html
@@ -14,8 +14,18 @@
         <nav>
           <ul>
             <li><a href="#">關於作者</a></li>
-            <li><a href="design-list.html">平面作品</a></li>
-            <li><a href="deslign-list2.html">網頁作品</a></li>
+            <li><a href="#">平面作品</a>
+              <ul class="submenu">
+                <li> <a href="design-list.html">品牌設計</a></li>
+                <li> <a href="design-list.html">包裝設計 </a></li>
+              </ul>
+            </li>
+            <li><a href="#">網頁作品</a>
+              <ul class="submenu">
+                <li> <a href="deslign-list2.html">品牌設計</a></li>
+                <li> <a href="deslign-list2.html">包裝設計 </a></li>
+              </ul>
+            </li>
             <li><a href="#">連絡作者</a></li>
           </ul>
         </nav>
